testsuite/tests/lkt/semantic/check_only/test.lkt
# Test lkt_toolbox's --check-only mode
val v = 1 + "foo"
